test/fail_compilation/fail132.d
import std.stdio;

class A
{
        class B
        {
        }
}

void main()
{
        A.B c =  new A.B;
}
